--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/drebolivar/thriftR-backend#readme",
   "dependencies": {
+    "@ngneat/falso": "^6.1.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
