--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "sequelize": "^6.21.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
