--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "sequelize": "^6.21.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
