--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "homepage": "https://github.com/drebolivar/thriftR-backend#readme",
   "dependencies": {
     "@ngneat/falso": "^6.1.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "sequelize": "^6.21.3"
